# Bookstore-Management-System

./: .gitignore  CMakeLists.txt  KE_HOACH.md
src/: main.cpp
src/db/: DatabaseManager.cpp  DatabaseManager.h
src/factories/: ProductFactory.cpp  ProductFactory.h
src/models/: Book.cpp  Book.h  Customer.cpp  Customer.h  Magazine.cpp  Magazine.h  Order.cpp  Order.h  Product.cpp  Product.h  Stationery.cpp  Stationery.h
src/repositories/: CustomerRepository.cpp  CustomerRepository.h  OrderRepository.cpp  OrderRepository.h  ProductRepository.cpp  ProductRepository.h
src/services/: ReportService.cpp  ReportService.h  SalesService.cpp  SalesService.h
src/ui/: AppStyle.cpp  AppStyle.h  CustomerPage.cpp  CustomerPage.h  MainWindow.cpp  MainWindow.h  ProductPage.cpp  ProductPage.h  SalesPage.cpp  SalesPage.h  StatisticsPage.cpp  StatisticsPage.h
